# cowork

./: .gitattributes  .gitignore  AGENT_LOOP_REDESIGN.md  CLAUDE.md  Cargo.toml  LICENSE  PROJECT_STRUCTURE.md  TOOL_COMPARISON.md  build.bat  config.example.toml  dev.bat  push-to-github.sh  tasks-prompt-system.md  tasks.md
.cowork/skills/code-architect/: SKILL.md
.cowork/skills/code-explorer/: SKILL.md
.cowork/skills/code-review/: SKILL.md
.cowork/skills/code-reviewer/: SKILL.md
.cowork/skills/code-simplifier/: SKILL.md
.cowork/skills/feature-dev/: SKILL.md
.cowork/skills/pr-test-analyzer/: SKILL.md
.cowork/skills/silent-failure-hunter/: SKILL.md
.github/workflows/: build.yml  release.yml
crates/cowork-app/: Cargo.toml  tauri.conf.json
crates/cowork-app/capabilities/: default.json
crates/cowork-app/icons/: icon.icns
crates/cowork-app/src/: agentic_loop.rs  chat.rs  commands.rs  lib.rs  loop_channel.rs  main.rs  session_storage.rs  simple_commands.rs  simple_loop.rs  state.rs  streaming.rs
crates/cowork-cli/: Cargo.toml
crates/cowork-cli/src/: main.rs  onboarding.rs  update.rs
crates/cowork-cli/src/tui/: app.rs  events.rs  mod.rs  ui.rs
crates/cowork-core/: Cargo.toml
crates/cowork-core/examples/: chat_cli.rs  rig_stream_test.rs  rig_test.rs
crates/cowork-core/src/: config.rs  error.rs  formatting.rs  lib.rs  mcp_manager.rs  update.rs
crates/cowork-core/src/agent/: browser_agent.rs  document_agent.rs  file_agent.rs  mod.rs  orchestrator.rs  shell_agent.rs
crates/cowork-core/src/approval/: bash_safety.rs  mod.rs
crates/cowork-core/src/context/: gather.rs  mod.rs  monitor.rs  summarizer.rs  tokens.rs
crates/cowork-core/src/orchestration/: formatting.rs  mod.rs  session.rs  system_prompt.rs  tool_registry.rs  tool_result.rs
crates/cowork-core/src/prompt/: agents.rs  builder.rs  commands.rs  hook_executor.rs  hooks.rs  mod.rs  parser.rs  pipeline.rs  plugins.rs  registry.rs  substitution.rs  types.rs
crates/cowork-core/src/prompt/builtin/: mod.rs  system_prompt.md
crates/cowork-core/src/prompt/builtin/agents/: bash.md  explore.md  general.md  plan.md
crates/cowork-core/src/prompt/builtin/claude_code/: SYNC_INFO.md  mod.rs
crates/cowork-core/src/prompt/builtin/claude_code/agents/: bash.md  explore.md  general.md  plan.md
crates/cowork-core/src/prompt/builtin/claude_code/reminders/: git_commit.md  plan_mode_active.md  security_policy.md
crates/cowork-core/src/prompt/builtin/claude_code/system/: main.md
crates/cowork-core/src/prompt/builtin/claude_code/tools/: askuserquestion.md  bash.md  edit.md  enterplanmode.md  exitplanmode.md  glob.md  read.md  skill.md  task.md  todowrite.md  webfetch.md  websearch.md
crates/cowork-core/src/prompt/builtin/commands/: commit.md  pr.md  review-pr.md
crates/cowork-core/src/prompt/builtin/reminders/: conversation_summarization.md  plan_mode_active.md  security_policy.md
crates/cowork-core/src/prompt/builtin/tools/: ask_user_question.md  bash.md  edit.md  enter_plan_mode.md  exit_plan_mode.md  glob.md  grep.md  lsp.md  read.md  task.md  todo_write.md  web_fetch.md  web_search.md  write.md
crates/cowork-core/src/provider/: catalog.rs  factory.rs  genai_provider.rs  logging.rs  mod.rs  model_catalog.rs  model_listing.rs  providers.json  rig_provider.rs
crates/cowork-core/src/session/: agent_loop.rs  approval.rs  chat_session.rs  manager.rs  mod.rs  persistence.rs  types.rs
crates/cowork-core/src/skills/: builtins.rs  context.rs  dev.rs  git.rs  installer.rs  loader.rs  mcp.rs  memory.rs  mod.rs  permissions.rs  session.rs  skill_cmd.rs  vim.rs
crates/cowork-core/src/task/: executor.rs  mod.rs  planner.rs
crates/cowork-core/src/tools/: mcp.rs  mod.rs  process_utils.rs
crates/cowork-core/src/tools/browser/: interact.rs  mod.rs  navigate.rs  screenshot.rs
crates/cowork-core/src/tools/document/: mod.rs  read_office.rs  read_pdf.rs
crates/cowork-core/src/tools/filesystem/: delete.rs  document.rs  edit.rs  export.rs  glob.rs  grep.rs  list.rs  mod.rs  move_file.rs  path_utils.rs  read.rs  search.rs  write.rs
crates/cowork-core/src/tools/interaction/: ask_question.rs  mod.rs
crates/cowork-core/src/tools/lsp/: client.rs  mod.rs
crates/cowork-core/src/tools/notebook/: edit.rs  mod.rs
crates/cowork-core/src/tools/planning/: config.rs  enter_plan_mode.rs  mod.rs  plan_mode.rs
crates/cowork-core/src/tools/shell/: execute.rs  kill.rs  mod.rs
crates/cowork-core/src/tools/skill/: mod.rs
crates/cowork-core/src/tools/task/: agent.rs  executor.rs  mod.rs  todo.rs
crates/cowork-core/src/tools/web/: fetch.rs  mod.rs  search.rs
crates/cowork-core/tests/: agentic_loop_tests.rs  config_tests.rs  context_tests.rs  document_tests.rs  export_tests.rs  filesystem_tests.rs  mcp_tests.rs  prompt_system_tests.rs  provider_tests.rs  session_tests.rs  shell_tests.rs  skills_tests.rs  web_tests.rs
crates/cowork-mcp/: Cargo.toml
crates/cowork-mcp/src/: client.rs  lib.rs  protocol.rs  server.rs  transport.rs
crates/cowork-sandbox/: Cargo.toml
crates/cowork-sandbox/src/: container.rs  lib.rs  policy.rs  process.rs
docs/: CLAUDE_CODE_PROMPT_PLAN.md  CLAUDE_CODE_PROMPT_SYSTEM.md  MIGRATION_GUIDE.md  PROMPT_SYSTEM_IMPLEMENTATION.md  PROMPT_SYSTEM_ROADMAP.md  README.md  TOOL_RESULT_IMPLEMENTATION_PLAN.md  chat.md  configuration.md  faq.md  getting-started.md  keyboard-shortcuts.md  sessions.md  thinking.md
docs/design/: cross-platform-path-handling.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  wdio.conf.ts
frontend/e2e/: app.spec.ts  sessions.spec.ts  settings.spec.ts
frontend/src/: App.tsx  index.css  store.ts
frontend/src/bindings/: ChatMessage.ts  LoopEvent.ts  LoopOutput.ts  LoopState.ts  QuestionOption.ts  Session.ts  ToolCallInfo.ts  ToolCallStatus.ts  UserQuestion.ts  index.ts
frontend/src/components/: ApprovalModal.tsx  ClickablePaths.tsx  ContextIndicator.tsx  DiffPreview.tsx  DiffView.tsx  HelpPanel.tsx  (+10 more)
scripts/: claude-loop.sh  expand_conditionals.py  sync-claude-prompts.sh  test_tui_pexpect.py
(+14 files in other folders)
