[workspace]
resolver = "2"
members = [
    "crates/cowork-core",
    "crates/cowork-mcp",
    "crates/cowork-sandbox",
    "crates/cowork-app",
    "crates/cowork-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/example/cowork"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Internal crates
cowork-core = { path = "crates/cowork-core" }
cowork-mcp = { path = "crates/cowork-mcp" }
cowork-sandbox = { path = "crates/cowork-sandbox" }
