[package]
name = "cowork-app"
version = "0.1.0"
edition.workspace = true
description = "Cowork desktop application"
license = "MIT"

[lib]
name = "cowork_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cowork"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cowork-core = { path = "../cowork-core" }
cowork-mcp = { path = "../cowork-mcp" }
cowork-sandbox = { path = "../cowork-sandbox" }

tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
