[package]
name = "cowork-app"
version = "0.1.0"
edition.workspace = true
description = "Cowork desktop application"
license = "MIT"

[lib]
name = "cowork_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cowork"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cowork-core = { path = "../cowork-core" }
cowork-mcp = { path = "../cowork-mcp" }
cowork-sandbox = { path = "../cowork-sandbox" }

tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
# Self-update (same approach as CLI - no private key needed)
self_update = { version = "0.41", features = ["archive-tar", "archive-zip", "compression-flate2"] }
self-replace = "1"
reqwest = { version = "0.13", features = ["blocking"] }
flate2 = "1"
tar = "0.4"
zip = "7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0.0"
shlex = "1.3"
tauri-plugin-opener = "2.5.3"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
