[package]
name = "cowork-cli"
version = "0.1.0"
edition = "2021"
description = "Cowork CLI - Multi-agent assistant command line tool"
license = "Apache-2.0"

[[bin]]
name = "cowork"
path = "src/main.rs"

[dependencies]
cowork-core = { path = "../cowork-core", features = ["lsp", "tiktoken"] }
cowork-mcp = { path = "../cowork-mcp" }

tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dialoguer = "0.12.0"
console = "0.16.2"
indicatif = "0.18.3"
directories = "6.0.0"
dunce = "1"  # Cross-platform canonicalize without UNC prefix on Windows
rustyline = { version = "17.0.2", features = ["derive"] }
