[package]
name = "cowork-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Cowork - agents, tools, and orchestration"

[dependencies]
# LLM Framework
genai = "0.5"

# Async runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
toml.workspace = true

# File operations
walkdir = "2"
globset = "0.4"
glob = "0.3"
regex = "1"
notify = "6"

# Browser automation
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], optional = true }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "blocking"] }
url = "2"

# Utils
uuid.workspace = true
chrono.workspace = true
dirs = "5"
zip = "2"
dunce = "1"  # Cross-platform canonicalize without UNC prefix on Windows

# Document parsing
pdf-extract = "0.10"
calamine = "0.26"     # Excel parsing (0.27 has zip version conflict)
dotext = "0.1"        # Word/docx text extraction
quick-xml = "0.37"    # XML parsing for PPTX

# Token counting
tiktoken-rs = { version = "0.6", optional = true }

# LSP client
lsp-types = { version = "0.97", optional = true }

# Internal
cowork-mcp = { workspace = true, optional = true }
cowork-sandbox = { workspace = true, optional = true }

[features]
default = ["browser", "mcp", "sandbox", "tiktoken", "lsp"]
browser = ["dep:chromiumoxide"]
mcp = ["dep:cowork-mcp"]
sandbox = ["dep:cowork-sandbox"]
tiktoken = ["dep:tiktoken-rs"]
lsp = ["dep:lsp-types"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
chrono = "0.4"
