[package]
name = "cowork-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Cowork - agents, tools, and orchestration"

[dependencies]
# LLM Framework
genai = "0.5.3"

# Async runtime
tokio.workspace = true
futures.workspace = true

# Synchronization
parking_lot = "0.12"

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yml = "0.0.12"
toml.workspace = true

# File operations
walkdir = "2"
globset = "0.4"
glob = "0.3"
regex = "1"
notify = "8"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# HTTP client for API calls
reqwest = { version = "0.13", features = ["json", "blocking", "query"] }
url = "2"

# Utils
uuid.workspace = true
chrono.workspace = true
dirs = "6"
base64 = "0.22"
zip = "7"
dunce = "1"  # Cross-platform canonicalize without UNC prefix on Windows
sha2 = "0.10"

# Document parsing (reading)
pdf-extract = "0.10"
calamine = "0.32"
dotext = "0.1"        # Word/docx text extraction
quick-xml = "0.39"    # XML parsing for PPTX

# Document generation (writing)
genpdf = "0.2"
rust_xlsxwriter = "0.93"
docx-rs = "0.4"

# Token counting
tiktoken-rs = { version = "0.9", optional = true }

# LSP client
lsp-types = { version = "0.97", optional = true }

# Internal
cowork-mcp = { workspace = true, optional = true }
cowork-sandbox = { workspace = true, optional = true }
rand = "0.9.2"

[features]
default = ["mcp", "sandbox", "tiktoken", "lsp"]
mcp = ["dep:cowork-mcp"]
sandbox = ["dep:cowork-sandbox"]
tiktoken = ["dep:tiktoken-rs"]
lsp = ["dep:lsp-types"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
chrono = "0.4"
