[package]
name = "cowork-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sandboxing and security for Cowork"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["process", "time"] }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
nix = { version = "0.29", features = ["process", "signal"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS uses sandbox-exec command

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }
